force-app/main/default/objects/Linked_In_Post_Message__c/Linked_In_Post_Message__c.object-meta.xml
<CustomObject>
    <description>PGO-0012 : Create custom object to store all LinkedIn Post messages.</description>
    <label>Linked In Post Message</label>
    <nameField>
        <displayFormat>LPM-{YYYYMMDD}-{00000}</displayFormat>
        <label>Post Message</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked In Post Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>