force-app/main/default/objects/Linked_In_Post_Message__c/fields/LinkedIn_Post_Message__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Post_Message__c</fullName>
    <description>PGP-0012 : Stores LinkedIn Message</description>
    <label>LinkedIn Post Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>