force-app/main/default/objects/Linked_In_Post_Message__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>PGP-0012 : Stores Object name of Post Message request</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>