force-app/main/default/objects/Linked_In_Post_Message__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>PGP-0012 : Stores object record Id</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>