force-app/main/default/objects/Linked_In_Post_Message__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>PGP-0012 : Stores response from LinkedIn Server</description>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>