force-app/main/default/objects/Linked_In_Post_Message__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <description>PGP-0012 - Stores response message (Error or Success)</description>
    <label>Response Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>