force-app/main/default/objects/Linked_In_Post_Message__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>PGP-0012 - Stores status code of request</description>
    <label>Status Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>